--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-21-22-tutorial",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AndriiBogomolov.github.io/react-21-22-tutorial/",
+  "homepage": "https://AndriiBogomolov.github.io/REACT-21-22-Tutorial/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
